--- a/style.css
+++ b/style.css
@@ -19,12 +19,20 @@
     align-items: center;
 }
 
+.f-space-arround {
+    justify-content: space-around;
+}
+
 .m-top10 {
     margin-top: 10em;
 }
 
 .m-bottom3 {
     margin-bottom: 3em;
+}
+
+.m-bottom1 {
+    margin-bottom: 1em;
 }
 
 .wd-30 {
@@ -60,6 +68,12 @@
 
 .p2-text {
     color: gray;
+    line-height: 1.5em;
+    font-size: 2em;
+}
+
+.p2-text-white {
+    color: white;
     line-height: 1.5em;
     font-size: 2em;
 }
@@ -146,10 +160,12 @@ main {
 }
 
 .call-now {
-    background:linear-gradient(90deg, rgba(249, 101, 74, 0.766) 24%,rgba(255, 116, 92, 0.829) 39%, rgba(255, 255, 255, 0) 100%),url(./images/watch.png);
+    /* background:linear-gradient(90deg, rgba(250, 117, 45, 0.766) 24%,rgba(255, 116, 92, 0.829) 39%, rgba(255, 255, 255, 0) 100%),url(./images/watch.png); */
+    background:linear-gradient(90deg, rgba(240, 97, 36, 0.823) 19%, rgba(255, 255, 255, 0.138) 100%),url(./images/watch.png);
     background-repeat: no-repeat;
     background-size: cover;
-
+    display: flex;
+    align-items: center;
     width: 80em;
     height: 20em;
     margin: 10em auto 0;
@@ -160,4 +176,32 @@ main {
 .call-now .call-now-des {
     width: 80%;
     margin: 0 auto;
+}
+
+/* ----------------Footer---------------- */
+input[type="email"] {
+    width: 300px;
+    height: 75px;
+    color: lightgrey;
+    font-weight: 600;
+    padding: 10px;
+    display: block;
+    border-radius: 10px;
+    font-size: 19px;
+    border: 3px solid #ccc;
+    background-color: black;
+}
+footer {
+    background-color: black;
+    color: white;
+    height: 40em;
+    justify-content: space-around;
+}
+
+footer > * {
+    flex-basis: 500px;
+}
+
+footer .footer-icon > * {
+    margin-right: 10px;
 }
