fixd employe width

--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@
 
 /* Common Css */
 .h1-bold{
-    font-size: 5em;
+    font-size: 5gem;
     font-weight: 800;
 }
 
@@ -128,7 +128,7 @@ main {
 
 
 .employe {
-    width: 40em;
+    width: 45em;
     height: auto;
 }
 
