--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;800&display=swap');
 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Work Sans', sans-serif;
 }
 
 /* Position : Common CSS */
@@ -82,8 +83,6 @@
     color: white;
     border: none;
     background-color: tomato;
-    width: 175px;
-    height: 70px;
     font-size: 25px;
     padding: 20px 25px;
     border-radius: 5px;
@@ -92,8 +91,6 @@
     color: tomato;
     border: none;
     background-color: white;
-    width: 175px;
-    height: 70px;
     font-size: 25px;
     padding: 20px 25px;
     border-radius: 5px;
@@ -110,7 +107,7 @@ header {
 .header-container {
     text-align: right;
     position: absolute;
-    width: 35em;
+    width: 31%;
     left: 55%;
     top: 35%;
 }
@@ -119,7 +116,7 @@ header {
 
 main {
     margin: 0 auto;
-    width: 70%;
+    width: 75%;
 }
 
 .mid-container {
@@ -182,13 +179,12 @@ main {
 input[type="email"] {
     width: 300px;
     height: 75px;
-    color: lightgrey;
-    font-weight: 600;
+    font-weight: 500;
     padding: 10px;
     display: block;
     border-radius: 10px;
     font-size: 19px;
-    border: 3px solid #ccc;
+    border: 2px solid #ccc;
     background-color: black;
 }
 footer {
